# DocMind

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/docmind/: __init__.py  app.py  config.py  logging.py  middleware.py
src/docmind/api/: ask.py  health.py  query.py  upload.py
src/docmind/core/: chat.py  embedding.py  ingest.py  retrieval.py  security.py  store.py
tests/: conftest.py  test_ask.py  test_health.py  test_ingest.py  test_retrieval.py  test_security.py  test_upload.py
